--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ flask-restful = "*"
 flask-marshmallow = "*"
 marshmallow-sqlalchemy = "*"
 flask-cors = "*"
+flask-socketio = "*"
 
 [dev-packages]
 
